			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2733 2005/03/07 20:38:35 sakane Exp $

<200503>
Tue Mar  8 05:31:52 JST 2005
	* kame/kame/racoon/isakmp.c:
	one of buffer overrun problem was fixed.  from ipsec-tools team.

Mon Mar  6 2005  itojun@iijlab.net
	* kame/sys/netinet{,6}/sctp*: new patch from randall

2005-03-02  SUZUKI, Shinsuke <suz@kame.net>
	* kame/kame/dhcp6/dhcp6.c: fixed a DHCPv6-client 
	  initialization failure when a node has no IPv6 global address.

2005-03-02  SUZUKI, Shinsuke <suz@kame.net>
	* kame/kame/dhcp6/dhcp6relay.[c8]: supports multiple client-side 
	  interfaces

2005-03-02  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet6/ip6_output.c: fixed a freebsd5 kernel crash when
	  WITNESS debug option is enabled

2005-03-01  ryuji <ryuji@sfc.wide.ad.jp>
	* "mdd" is replaced by "babymdd". please see man page for details.

2005-03-01  SUZUKI, Shinsuke <suz@kame.net>
	* integrated dhcp6lc functionality into dhcp6c ('i' option)

<200502>
2005-02-28  Tsuyoshi MOMOSE  <momose@az.jp.nec.com>
	* kame/sys/net/mipsock.c, kame/kame/shisad/mnd.c: Fixed word alignment
	problems.

2005-02-22  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/net/pf.c, freebsd5/sys/contrib/pf/net/pf.c: fixed a bug that
	  PF discards every packet with option headers.

	  Reported by: Stig Venaas

2005-02-22  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/netinet6/ip6_input.c: fixed PF malfunction for inbound
	  IPv6 traffic on freebsd5.

2005-02-15  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/ipsec.c: (ipsec[46]_in_reject): fixed
	unexpected panic on freebsd5.

Mon Feb  7 12:02:16 JST 2005	keiichi@iijlab.net
	* freebsd4: Upgrade to 4.11-RELEASE

<200501>
2005-01-31  Tsuyoshi MOMOSE  <momose@az.jp.nec.com>
	* kame/sys/netinet6/mip6.c: stop proxy ND on a home agent when 
	the home agent daemon was terminated.
	This problem was found by Christian Vogt<chvogt@tm.uka.de>.

2005-01-23  suz@crl.hitachi.co.jp